--- a/html-sandbox-starter/07-responsive-media-queries/03-vh-vw-units/index.html
+++ b/html-sandbox-starter/07-responsive-media-queries/03-vh-vw-units/index.html
@@ -13,6 +13,12 @@
     <title>HTML & CSS Sandbox</title>
   </head>
   <body>
-    <h1>HTML & CSS Sandbox - VH & VW Units</h1>
+    <!-- <h1>HTML & CSS Sandbox - VH & VW Units</h1> -->
+    <div class="container">
+      <h1>Lorem, ipsum dolor.</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium facere pariatur corporis facilis nobis magnam eius iure cum aliquid repellendus natus nesciunt consectetur in, eos provident soluta numquam quam quasi.
+      </p>
+    </div>  
   </body>
 </html>
