--- a/html-sandbox-starter/07-responsive-media-queries/08-container-queries/index.html
+++ b/html-sandbox-starter/07-responsive-media-queries/08-container-queries/index.html
@@ -7,6 +7,12 @@
     <title>HTML & CSS Sandbox</title>
   </head>
   <body>
-    <h1>HTML & CSS Sandbox - Container Queries</h1>
+    <main>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate mollitia error perspiciatis, reprehenderit aspernatur molestias?</p>
+    </main>
+    <aside>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, itaque.
+      </p>
+    </aside>
   </body>
 </html>
