--- a/html-sandbox-starter/07-responsive-media-queries/09-container-units/index.html
+++ b/html-sandbox-starter/07-responsive-media-queries/09-container-units/index.html
@@ -7,6 +7,16 @@
     <title>HTML & CSS Sandbox</title>
   </head>
   <body>
-    <h1>HTML & CSS Sandbox - Container Units</h1>
+    <!-- <h1>HTML & CSS Sandbox - Container Units</h1> -->
+    <main>
+      <div class="card card-1">
+        <h2>My Card</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi non consequatur aperiam harum sit, culpa veritatis recusandae! Ut, veritatis explicabo.</p>
+      </div>
+      <div class="card card-2">
+        <h2>My Card</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi non consequatur aperiam harum sit, culpa veritatis recusandae! Ut, veritatis explicabo.</p>
+      </div>
+    </main>  
   </body>
 </html>
