--- a/html-sandbox-starter/01-essential-html/02-headings-paragraphs/index.html
+++ b/html-sandbox-starter/01-essential-html/02-headings-paragraphs/index.html
@@ -7,5 +7,13 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - Headings & Paragraphs</h1>
+    <h2>Heading 2</h2>
+    <h3>heading 3</h3>
+
+    <!-- Paragraph -->
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum sunt excepturi ipsam. Itaque sequi repellendus, perspiciatis laudantium commodi alias suscipit quo quis qui aliquid doloremque asperiores rem dicta aliquam et veniam quidem dolorum quisquam corporis.</p>
+
+     <h3>Subject 1</h3>
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ducimus? Quae soluta, est minus ratione sapiente harum sit magnam quasi blanditiis qui unde eos itaque officiis optio facilis ad aliquid esse maiores repellendus ipsam odit?</p>
   </body>
 </html>
