--- a/html-sandbox-starter/01-essential-html/02-headings-paragraphs/index.html
+++ b/html-sandbox-starter/01-essential-html/02-headings-paragraphs/index.html
@@ -15,5 +15,13 @@
 
      <h3>Subject 1</h3>
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, ducimus? Quae soluta, est minus ratione sapiente harum sit magnam quasi blanditiis qui unde eos itaque officiis optio facilis ad aliquid esse maiores repellendus ipsam odit?</p>
+
+     <!-- Text Emphasis Tags -->
+      <p>This is <strong>impotant</strong> text</p>
+      <p>This is <em>emphaiszed</em> text</p>
+      <p>This is <mark>highlighted</mark> text</p>
+      <p>This is <del>deleted</del> text</p>
+      <p>This is <ins>inserted</ins> text</p>
+      <p>This is <sub>subscripted</sub> text</p>
   </body>
 </html>
