--- a/html-sandbox-starter/01-essential-html/03-lists/index.html
+++ b/html-sandbox-starter/01-essential-html/03-lists/index.html
@@ -7,5 +7,28 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - Lists</h1>
+
+    <!-- Unorderd List -->
+     <ul>
+      <li>Item One</li>
+      <li>Item Two</li>
+      <li>Item Tree</li>
+     </ul>
+
+    <!-- Order List -->
+    <ol>
+      <li>Item One</li>
+      <li>Item Two</li>
+      <li>Item Tree</li>
+    </ol>
+
+    <ul>
+      <li>Item One</li>
+      <li>Item Two</li>
+      <ul>
+      <li>Item Tree</li>
+      </ul>
+    </ul>
+
   </body>
 </html>
