--- a/html-sandbox-starter/01-essential-html/08-divs-and-spans/index.html
+++ b/html-sandbox-starter/01-essential-html/08-divs-and-spans/index.html
@@ -6,6 +6,28 @@
     <title>HTML & CSS Sandbox</title>
   </head>
   <body>
-    <h1>HTML & CSS Sandbox - Divs and Spans</h1>
-  </body>
+    <h1>My website</h1>
+    <div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+    
+    <!-- Sections -->
+     <div>
+      <h2>Section One</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, eius.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+     </div>
+     <div>
+      <h2>Section One</h2>
+      <p>Lorem ipsum dolor sit amet <span>consectetur adipisicing elit</span>. Neque, eius.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+     </div>
+
+     <!-- Footer -->
+      <div>&copy; 2024 My Website</div> 
+    </body>
 </html>
