--- a/html-sandbox-starter/01-essential-html/11-emmet-crash-course/index.html
+++ b/html-sandbox-starter/01-essential-html/11-emmet-crash-course/index.html
@@ -7,5 +7,42 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - Emmet Crash Course</h1>
+
+    <!-- div -->
+    <div></div>
+
+  
+    <p class="text-xl"></p>
+    <div class="text-xl"></div>
+
+    <div class="text-xl text-center"></div>
+
+    <div id="main"></div>
+    <p id="about"></p>
+
+    <div id="about" class="section"></div>
+
+    <div>
+      <p></p>
+    </div>
+
+    <div id="about">
+      <p class="card"></p>
+    </div>
+
+    <div>
+      <p></p>
+      <p></p>
+      <p></p>
+    </div>
+
+    <ul>
+      <li>/li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+
   </body>
 </html>
