checkboxes and radio buttons

--- a/html-sandbox-starter/02-forms-and-inputs/04-checkboxes-and-radio/index.html
+++ b/html-sandbox-starter/02-forms-and-inputs/04-checkboxes-and-radio/index.html
@@ -6,6 +6,15 @@
     <title>HTML & CSS Sandbox</title>
   </head>
   <body>
-    <h1>HTML & CSS Sandbox - Checkboxes & Radio</h1>
+    <h1>Favorite Programming Languages</h1>
+    <form>
+      <label for="html">
+        <input type="checkbox" name="Languages" id="html" value="html" checked />
+        CSS
+      </label>
+        <label for="javaScript">
+          <input type="checkbox" name="languages" id="javascript" value="javascript"/> JavaScript
+        </label>
+    </form>
   </body>
 </html>
