--- a/html-sandbox-starter/02-forms-and-inputs/05-other-input-types/index.html
+++ b/html-sandbox-starter/02-forms-and-inputs/05-other-input-types/index.html
@@ -7,5 +7,32 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - Other Input Types</h1>
+
+    <form>
+      <div>
+        <label for="color">Color</label>
+        <input type="color" name="color" id="color" />
+      </div>
+      <br />
+      <div>
+        <label for="date">Date</label>
+        <input type="time" name="time" id="time" />
+      </div>
+      <br />
+      <div>
+        <label for="week">Week</label>
+        <input type="week" name="week" id="week" />
+      </div>
+      <br />
+      <div>
+        <label for="month">Month</label>
+        <input type="month" name="month" id="month" />
+      </div>
+      <br />
+      <div>
+        <label for="range">Range</label>
+        <input type="renge" name="renge" id="renge" min="0" max="100" />
+      </div>
+    </form>
   </body>
 </html>
