--- a/html-sandbox-starter/03-more-html-elements/01-audio-element/index.html
+++ b/html-sandbox-starter/03-more-html-elements/01-audio-element/index.html
@@ -22,5 +22,10 @@
     <!-- Loop -->
      <audio src="./song1.mp3" autoplay controls loop></audio>
 
+     <!-- figure -->
+      <figure></figure>
+      <figcaption>Listen to the song:</figcaption>
+      <audio src="./song1.mp3" controls></audio>
+      <a href="./song1.mp3">Download Audio</a>
   </body>
 </html>
