--- a/html-sandbox-starter/03-more-html-elements/02-video-element/index.html
+++ b/html-sandbox-starter/03-more-html-elements/02-video-element/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - Video</h1>
+
+    <!-- <video src="./video1.mov" type="video/quicktime" controls></video> -->
+    <!-- <video src="./video1.mov" type="video/quicktime" autoplay controls></video> -->
+
+    <!-- Loop -->
+    <video src="./video1.mov" type="video/quicktime" loop controls></video>
   </body>
 </html>
