--- a/html-sandbox-starter/03-more-html-elements/04-tables/index.html
+++ b/html-sandbox-starter/03-more-html-elements/04-tables/index.html
@@ -7,5 +7,36 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - Tables</h1>
+
+    <table>
+      <colgroup>
+        <col style="background-color: aqua;">
+        <col style="background-color: darkcyan;">
+      </colgroup>
+      <thead>
+        <tr>
+          <th>Frist Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>John</td>
+          <td>Doe</td>
+            <td>John@gmail.com</td>
+            <td>410- 555-5700</td>
+            <td>410- 555-5700</td>
+          </tr>
+          <tr>
+            <td>Jene</td>
+            <td>Doe</td>
+            <td>Jane@gmail.com</td>
+            <td>410- 555-5700</td>
+            <td>410- 555-5700</td>
+          </tr>
+      </tbody>
+      
+    </table>
   </body>
 </html>
