--- a/html-sandbox-starter/03-more-html-elements/05-iframe/index.html
+++ b/html-sandbox-starter/03-more-html-elements/05-iframe/index.html
@@ -7,5 +7,16 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - iframe</h1>
+
+    <!-- Webpage -->
+    <iframe src="./test.html" frameborder="0"></iframe>
+
+    <!-- Videos -->
+    <iframe 
+      src="https://youtube.com/embed/8sXRyHI3bLw" 
+      frameborder="0"
+      width="500"
+      height="315"></iframe>
+
   </body>
 </html>
