--- a/html-sandbox-starter/03-more-html-elements/06-global-attributes/index.html
+++ b/html-sandbox-starter/03-more-html-elements/06-global-attributes/index.html
@@ -8,5 +8,37 @@
 
     <h1>HTML & CSS Sandbox - Global Attributes</h1>
 
-  </body>
+    <!-- class -->
+     <h2 class="text-xl">Heading 1</h2>
+
+    <!-- id -->
+     <h2 id="main-heading">Heading 2</h2>
+
+    <!-- style -->
+    <p style="color: red; font-size: 20px;">This is a paragraph</p>
+
+    <!-- accesskey -->
+     <button accesskey="h" onclick="alert('home button Clicked')">Home</button>
+
+     <!-- accesskey & title -->
+    <button tittle="Home Button accesskey=h" onclick="alert('Home Button Clicked')">Home</button>
+
+    <!-- hidden -->
+    <div hidden> This is a hidden div</div>
+
+    <!-- tabindex -->
+    <button tabindes="3">Button 1</button>
+    <button tabindex="1">Button 2</button>
+    <button tabindex="2">Button 3</button>
+
+    <!-- contenteditable -->
+     <div contenteditable="true">This is an editable div element</div>
+
+     <!-- draggable -->
+      <div draggable="true">This is a draggable div</div>
+
+      <!-- autofocus -->
+       <input type="text" autofocus>
+
+    </body>
 </html>
