--- a/html-sandbox-starter/03-more-html-elements/07-svg-element/index.html
+++ b/html-sandbox-starter/03-more-html-elements/07-svg-element/index.html
@@ -7,5 +7,13 @@
   </head>
   <body>
     <h1>HTML & CSS Sandbox - SVG Element</h1>
+
+    <svg width="200" height="200">
+      <circle cx="90" cy="100" fill="blue" />
+      <text x="80" y="80">
+      SVG
+      </text>
+    </svg>
+
   </body>
 </html>
